# worklog-menubar

./: .gitignore  .swiftlint.yml  Makefile  README.md  project.yml
.github/workflows/: lint.yml  release.yml
DevcapApp/: DevcapApp.swift  Info.plist
DevcapApp.xcodeproj/: project.pbxproj
DevcapApp/Assets.xcassets/DevcapLogo.imageset/: Contents.json
DevcapApp/Models/: AppState.swift  DevcapData.swift
DevcapApp/Views/: AboutView.swift  MenubarView.swift  ProjectSection.swift  SettingsView.swift
WorklogApp.xcodeproj/: project.pbxproj
WorklogMenubar/: GitIcon.swift  WorklogMenubarApp.swift
WorklogMenubar.xcodeproj/: project.pbxproj
WorklogMenubar/Assets.xcassets/MenubarIcon.imageset/: Contents.json
WorklogMenubar/Bridge/: WorklogBridge.swift
WorklogMenubar/Models/: AppState.swift  WorklogData.swift
WorklogMenubar/Views/: CommitRow.swift  MenubarView.swift  ProjectRow.swift  ProjectSection.swift  SettingsView.swift
devcap-ffi/: Cargo.toml  build.rs
devcap-ffi/src/: lib.rs
docs/: DEVELOPMENT.md  RELEASE.md
worklog-ffi/: Cargo.toml  build.rs  cbindgen.toml
worklog-ffi/src/: lib.rs
