[package]
name = "devcap-ffi"
version = "0.2.0"
edition = "2021"
description = "C-compatible FFI bindings for devcap-core"

[lib]
crate-type = ["staticlib"]

[dependencies]
devcap-core = { git = "https://github.com/konradmichalik/devcap.git", tag = "v0.5.0", package = "devcap-core" }
serde_json = "1"
rayon = "1"

[build-dependencies]
cbindgen = "0.28"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
todo = "deny"
dbg_macro = "warn"
