[package]
name = "worklog-ffi"
version = "0.1.0"
edition = "2021"
description = "C-compatible FFI bindings for worklog-core"

[lib]
crate-type = ["staticlib"]

[dependencies]
worklog-core = { git = "https://github.com/konradmichalik/worklog-git.git" }
serde_json = "1"
rayon = "1"

[build-dependencies]
cbindgen = "0.28"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
todo = "deny"
dbg_macro = "warn"
